server/compilers/goLiteJS/src/test/ml2/invalid/vardecl2.go
package main

//Redeclare identifier for var and type
var a int
type a bool
